FIxed Left alignment of Navigation Bar

--- a/src/components/HeroSection/style.css
+++ b/src/components/HeroSection/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600;700;800;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 .container {
     position: relative;
@@ -24,7 +23,6 @@
     color: --black-900, #121212;
     font-feature-settings: 'clig' off, 'liga' off;
     
-    /* Heading/03 */
     font-family: Space Grotesk;
     font-size: 54px;
     font-style: normal;
@@ -53,6 +51,6 @@
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: 32px; /* 177.778% */
+    line-height: 32px; 
     letter-spacing: -0.4px;
 }
